Navbar mobile, footer, dl_menu, pagewrap

--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -29,8 +29,8 @@
 
 <div class="pagewrap">
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-sm-none d-md-none">
-		<a class="navbar-brand" href="{ $home_php_name }">Lazarus</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-sm-none d-md-none top_bar_mobile">
+		<a class="navbar-brand pull-left" href="{ $home_php_name }">Lazarus</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
