--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -72,13 +72,13 @@
 {if $ishome eq "True"}
 
   <div class="slidewrap_bg">
-  <div class="slidewrap">
-	<div class="left_shot">
+  <div class="row">
+	<div class="left_shot col-md-8 text-center">
 		<a href="https://wiki.lazarus.freepascal.org/Screenshots">
 			<img src="{ $theme_path }images/homeshot_1.gif" class="img-fluid" alt="Lazarus Screenshot" title="Lazarus IDE" />
 		</a>
 	</div>
-	<div class="slider_r">
+	<div class="slider_r col-md-4">
 		<h1>Lazarus</h1>
 		<h2>The professional Free Pascal RAD IDE</h2>
 		<ul class="right">
