--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -72,7 +72,7 @@
 {if $ishome eq "True"}
 
   <div class="slidewrap_bg">
-  <div class="row">
+  <div class="row slidewrap" style="margin-right: 0px; margin-left: 0px;">
 	<div class="left_shot col-md-8 text-center">
 		<a href="https://wiki.lazarus.freepascal.org/Screenshots">
 			<img src="{ $theme_path }images/homeshot_1.gif" class="img-fluid" alt="Lazarus Screenshot" title="Lazarus IDE" />
