--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -29,7 +29,8 @@
 
 <div class="pagewrap">
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-sm-none d-md-none top_bar_mobile">
+	<nav>
+		<div class="navbar navbar-expand-lg navbar-dark bg-dark disp-s top_bar_mobile" style="display:none">
 		<a class="navbar-brand pull-left" href="{ $home_php_name }">Lazarus</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -47,9 +48,10 @@
 			<li class="nav-item"><a class="nav-link" href="http://wiki.freepascal.org/">Wiki</a></li>
 			</ul>
 		</div>
+		</div>
 	</nav>
 
-  <div class="top_bar d-none d-sm-block d-md-block">
+  <div class="top_bar disp-w d-sm-block d-md-block">
 	<div class="top_logo_bg">
 		<div class="top_logo">
 			<a href="{ $home_php_name }"><img src="{ $theme_path }images/top_logo.png" alt="Lazarus" /></a>
