Top image in mobile version

--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -30,8 +30,10 @@
 <div class="pagewrap">
 
 	<nav>
-		<div class="navbar navbar-expand-lg navbar-dark bg-dark disp-s top_bar_mobile" style="display:none">
-		<a class="navbar-brand pull-left" href="{ $home_php_name }">Lazarus</a>
+		<div class="top_logo_bg_s top_bar navbar navbar-expand-lg navbar-dark bg-dark disp-s top_bar_mobile" style="display:none">
+		<div class="top_logo_s">
+		<a class="navbar-brand pull-left" href="{ $home_php_name }"><img src="{ $theme_path }images/top_logo.png" width="160" height="35" alt="Lazarus" /></a>
+		</div>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
