Update link to app gallery

--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -134,7 +134,7 @@
 			<h2>What can it do?</h2>
 			<p>You can create your own open source or commercial applications. With Lazarus you can create file browsers, image viewers, database applications, graphics editing software, games, 3D software, medical analysis software or any other type of software.</p>
 			<p class="content_more small">
-				<span><a href="http://wiki.freepascal.org/Lazarus_Application_Gallery" class="btlink">See Application Gallery</a></span>
+				<span><a href="https://wiki.freepascal.org/Projects_using_Free_Pascal" class="btlink">See Application Gallery</a></span>
 				<span><a href="{ $home_php_name }?page=whyuse">Why use it?</a></span>
 			</p>
 		</div></div>
@@ -184,7 +184,7 @@
 						<div class="randproj_note">
 							<h2>Random Project</h2>
 							<p  class="content_more">from our 
-							<a href="http://wiki.freepascal.org/Lazarus_Application_Gallery">showcase</a>
+							<a href="https://wiki.freepascal.org/Projects_using_Free_Pascal">showcase</a>
 							.<br />
 							This is an example of what can be done with Lazarus</p>
 						</div>
