Update openhup link

--- a/site/themes/default/main.html
+++ b/site/themes/default/main.html
@@ -396,7 +396,7 @@
 		<div class="foot_right">
 		<a href="http://www.freepascal.org"><img src="{ $theme_path }images/footer_logo.gif" height="31" /></a>
 		<a href="http://sourceforge.net/projects/lazarus"><img src="{ $theme_path }images/footer_sf.gif" /></a>
-		<a href="http://www.ohloh.net/p/lazarus?ref=sample"><img src="{ $theme_path }images/footer_ohloh.gif" /></a>
+		<a href="https://www.openhub.net/p/lazarus?ref=sample"><img src="{ $theme_path }images/footer_ohloh.gif" /></a>
 		</div>
   </div>
 
